# cz-benchmarks

./: .flake8  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  Makefile  README-pypi.md  README.md  benchmark_helper_funcs.sh  custom.yaml  cz-benchmarks-1.code-workspace  cz-benchmarks.code-workspace  dev-requirements.txt  example.ipynb  example.py  example_baseline.py  example_bentoml.py  example_interactive.py  example_mlflow.py  example_perturb.py  pipeline.py  pr_baseline_fix_test.py  pyproject.toml  release-please-config.json  requirements-dev.txt  requirements-test.txt  requirements.txt  setup.py
.github/: issue_template.md
conf/: datasets.yaml  models.yaml
dge_files/: Replogle_K562_essential_processing_Opt1.ipynb  control_cells_validate.ipynb  control_cells_validate_2.ipynb  controlcells_run.py  dge_run.py  dge_test_compute.ipynb  dge_test_validate.ipynb  preprocess_pipeline.py  replogle_preprocessor.py  test_equivalency_perturbation_dataset.py
docker/: README.md
docker_scripts/: run_docker.sh
docs/: README.md  api_reference.html  assets.html  cache_proposal.md  changelog_release_notes.html  genindex.html  index.html  legal.html  objects.inv  py-modindex.html  quick_start.html  roadmap.html  search.html  searchindex.js
examples/: custom_interactive.yaml  czbenchmark_nb_usage.ipynb  czbenchmark_with_vcp_model.ipynb  end-to-end-tutorial.py  example.py  example_interactive.py  example_interactive_perturb.py  example_perturb.py  example_perturbation_expression_prediction.py  example_perturbseq.py  k562_perturbation_task.py  model_developer_workflow.ipynb  package_vcp_model.sh  perturbation_expression_prediction_task.py  pipeline.py  scvi_all_tasks_benchmark.ipynb  scvi_model_dev_workflow.ipynb  task_start_outline.py  test.ipynb  test_equivalency_perturbation_dataset.py  test_equivalency_perturbation_task.py  using_czbenchmarks.ipynb  vcp_mlflow_model_benchmark.ipynb
model_pkg_client_tools/: .gitignore  generate_model_pkg_dir_structure.py
sandbox/: sandbox.ipynb
scripts/: compare_task_results.py  run_docker.sh
terraform/: main.tf
tests/: README.md  conftest.py  test_dataset_task_e2e_regression.py  test_file_utils.py  utils.py  (+3 more)
(+577 files in other folders)
