[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cz-benchmarks"
version = "0.3.0"
description = "A framework for benchmarking single-cell machine learning models"
authors = [{ name = "Chan Zuckerberg Initiative", email = "pypi@chanzuckerberg.com" }]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10.12"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: MIT License",
]
dependencies = [
    # Core dependencies
    "docker>=6.1.0",
    "pyyaml>=6.0",
    "boto3>=1.28.0",

    # Data handling
    "anndata>=0.9.0",
    "h5py>=3.8.0",

    "dill>=0.3.6",
    "scikit-learn",
    "scanpy",
    "igraph>=0.11.8",
    "leidenalg>=0.10.2",

    "hydra-core>=1.3.2",
    "hnswlib>=0.8.0; platform_system == 'Linux'",  # Install via conda on macOS
    "scib-metrics==0.5.1",
    "scikit-misc==0.5.1",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "black==24.8.0",
    "flake8==7.0.0",
    "autoflake==2.2.1",
    "ruff==0.9.8",
    "mypy==1.9.0",
    "pre-commit>=4.1.0",
    "pytest>=7.4.0",
    "pytest-cov>=6.0.0",
    "typing-extensions>=4.5.0",
]

docs = [
    "sphinx==8.2.3",
    "sphinx-autoapi==3.6.0",
    "sphinx-autodoc-typehints==3.1.0",
    "sphinx-markdown-builder==0.6.8",
    "myst-parser==1.0.0",
    "sphinx-rtd-theme==3.0.2",
    "sphinxcontrib-applehelp==2.0.0",
    "sphinxcontrib-devhelp==2.0.0",
    "sphinxcontrib-htmlhelp==2.1.0",
    "sphinxcontrib-jquery==4.1",
    "sphinxcontrib-jsmath==1.0.1",
    "sphinxcontrib-napoleon==0.7",
    "sphinxcontrib-qthelp==2.0.0",
    "sphinxcontrib-serializinghtml==2.0.0",
]

[project.urls]
Homepage = "https://github.com/chanzuckerberg/cz-benchmarks"
Repository = "https://github.com/chanzuckerberg/cz-benchmarks"

[tool.hatch.build.targets.wheel]
packages = ["src/czbenchmarks"]
